--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "19.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
